# grav_compensation_repo

./: LICENSE  README.md
impedance_node/: package.xml  setup.cfg  setup.py
impedance_node/impedance_node/: impedance_node.py  impedance_node_free.py
pinocchio_/: CMakeLists.txt  package.xml
pinocchio_/include/pinocchio_/: gravity_compensation.h  rrbot_description.hpp
pinocchio_/launch/: gravity_compensation.launch.py  impedance_simple.launch.py  impedance_simple_free.launch.py  impedance_with_pinocchio.launch.py  impedance_with_tf2.launch.py
pinocchio_/src/: gravity_compensation.cpp  gravity_compensation_2.cpp  gravity_compensation_3.cpp  gravity_compensation_4.cpp  gravity_compensation_original.cpp  kinematics.cpp  rrbot_description.cpp  tf2_j.cpp  tf2_trial.cpp
pinocchio_/urdf/: kuka_mini_combined.urdf.xacro  rrbot_1.urdf  rrbot_2.urdf.xacro
